--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Advanced To-Do List</title>
+  <link rel="stylesheet" href="style.css" />
+  <!-- Folosim Animate.css pentru animații -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Advanced To-Do List</h1>
+      <button id="themeToggle">Dark Mode</button>
+    </header>
 
+    <section class="input-section">
+      <input type="text" id="taskTitle" placeholder="Titlu task..." />
+      <input type="date" id="taskDueDate" />
+      <select id="taskPriority">
+        <option value="low">Scăzut</option>
+        <option value="medium">Mediu</option>
+        <option value="high">Ridicat</option>
+      </select>
+      <button id="addTaskBtn">Adaugă Task</button>
+    </section>
+
+    <section class="filter-section">
+      <input type="text" id="searchTask" placeholder="Caută task..." />
+      <select id="filterPriority">
+        <option value="all">Toate prioritățile</option>
+        <option value="low">Scăzut</option>
+        <option value="medium">Mediu</option>
+        <option value="high">Ridicat</option>
+      </select>
+    </section>
+
+    <ul id="taskList"></ul>
+  </div>
+
+  <!-- Include SortableJS pentru drag-and-drop -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
